# taskiq-aio-pika

./: .flake8  .pre-commit-config.yaml  LICENSE  Makefile  README.md  docker-compose.yaml  pyproject.toml
.github/workflows/: release.yml  test.yml
examples/: basic.py  delayed_task.py  topic_with_two_queues.py
taskiq_aio_pika/: __init__.py  aio_pika_broker.py  broker.py  exceptions.py  exchange.py  queue.py
taskiq_aio_pika/middlewares/: __init__.py  retry_delayed_exchange.py
taskiq_aio_pika/taskiq/brokers/: aio_pika.py  aio_pika_broker.py
taskiq_aio_pika/tests/: conftest.py  test_broker.py
tests/: conftest.py  test_broker.py  test_delay.py  test_delay_with_plugin.py  test_routing.py  test_startup.py  utils.py
