[tool.poetry]
name = "taskiq-aio-pika"
version = "0.1.0"
description = ""
authors = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"
packages = [{ include = "taskiq", from = "taskiq_aio_pika" }]

[tool.poetry.dependencies]
python = "^3.7"
taskiq = { git = "https://github.com/taskiq-python/taskiq", branch = "master" }
aio-pika = "^8.1.0"
isort = "^5.10.1"
black = "^22.6.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
isort = "^5.10.1"
mypy = "^0.971"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
