[tool.poetry]
name = "taskiq-aio-pika"
version = "0.1.1"
description = "RabbitMQ broker for taskiq"
authors = ["Pavel Kirilin <win10@list.ru>"]
readme = "README.md"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.7",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
homepage = "https://github.com/taskiq-python/taskiq-aio-pika"
repository = "https://github.com/taskiq-python/taskiq-aio-pika"
keywords = ["taskiq", "tasks", "distributed", "async", "aio-pika"]

[tool.poetry.dependencies]
python = "^3.7"
taskiq = "^0"
aio-pika = "^8.1.0"

[tool.poetry.dev-dependencies]
pytest = "^7.0"
isort = "^5.10.1"
mypy = "^0.971"
black = "^22.6.0"
flake8 = "^4"
pre-commit = "^2.20.0"
yesqa = "^1.4.0"
autoflake = "^1.4"
wemake-python-styleguide = "^0.16.1"
pytest-xdist = { version = "^2.5.0", extras = ["psutil"] }
anyio = "^3.6.1"
pytest-cov = "^3.0.0"
mock = "^4.0.3"
types-mock = "^4.0.15"

[tool.mypy]
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[tool.isort]
profile = "black"
multi_line_output = 3

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
