[project]
name = "taskiq-aio-pika"
version = "0.0.0"
description = "RabbitMQ broker for taskiq"
authors = [
    {name = "Pavel Kirilin", email = "win10@list.ru"}
]
maintainers = [
    {name = "Pavel Kirilin", email = "win10@list.ru"}
]
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "Typing :: Typed",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Operating System :: OS Independent",
    "Intended Audience :: Developers",
    "Topic :: System :: Networking",
    "Development Status :: 3 - Alpha",
]
homepage = "https://github.com/taskiq-python/taskiq-aio-pika"
repository = "https://github.com/taskiq-python/taskiq-aio-pika"
keywords = ["taskiq", "tasks", "distributed", "async", "aio-pika"]
requires-python = ">=3.10,<4"
dependencies = [
    "taskiq>=0.12.0,<1",
    "aio-pika>=9.0.0",
    "aiostream>=0.7.1",
]

[dependency-groups]
dev = [
    "pre-commit>=4.4.0",
    # lint
    "ruff>=0.14.5",
    "black>=25.11.0",
    # type check
    "mypy>=1.18.2",
    # tests
    "pytest>=9.0.1",
    "pytest-cov>=7.0.0",
    "coverage>=7.11.3",
    "pytest-xdist[psutil]>=3.8.0",
    "anyio>=4.11.0",
    {include-group = "examples"},
]
examples = [
    "taskiq-redis>=1.1.2",
]

[tool.mypy]
python_version = "3.10"
strict = true
ignore_missing_imports = true
allow_subclassing_any = true
allow_untyped_calls = true
pretty = true
show_error_codes = true
implicit_reexport = true
allow_untyped_decorators = true
warn_return_any = false

[build-system]
requires = ["uv_build>=0.9.9,<0.10.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "taskiq_aio_pika"
module-root = ""

[tool.pytest.ini_options]
log_level = 'INFO'
anyio_mode = "auto"

[tool.ruff]
target-version="py310"
# List of enabled rulsets.
# See https://docs.astral.sh/ruff/rules/ for more information.
lint.select = [
    "E",   # Error
    "F",   # Pyflakes
    "W",   # Pycodestyle
    "C90", # McCabe complexity
    "I",   # Isort
    "N",   # pep8-naming
    "D",   # Pydocstyle
    "ANN", # Pytype annotations
    "S",   # Bandit
    "B",   # Bugbear
    "COM", # Commas
    "C4",  # Comprehensions
    "ISC", # Implicit string concat
    "PIE", # Unnecessary code
    "T20", # Catch prints
    "PYI", # validate pyi files
    "Q",   # Checks for quotes
    "RSE", # Checks raise statements
    "RET", # Checks return statements
    "SLF", # Self checks
    "SIM", # Simplificator
    "PTH", # Pathlib checks
    "ERA", # Checks for commented out code
    "PL",  # PyLint checks
    "RUF", # Specific to Ruff checks
    "UP",  # pyupgrade
]
lint.ignore = [
    "D105",    # Missing docstring in magic method
    "D107",    # Missing docstring in __init__
    "D212",    # Multi-line docstring summary should start at the first line
    "D401",    # First line should be in imperative mood
    "D104",    # Missing docstring in public package
    "D100",    # Missing docstring in public module
    "ANN401",  # typing.Any are disallowed in `**kwargs
    "PLR0913", # Too many arguments for function call
    "D106",    # Missing docstring in public nested class
    "SLF001", # Private member accessed
]
lint.mccabe = { max-complexity = 10 }
exclude = [".venv/"]
line-length = 88

[tool.ruff.lint.per-file-ignores]
"tests/*" = [
    "S101",   # Use of assert detected
    "S301",   # Use of pickle detected
    "D103",   # Missing docstring in public function
    "SLF001", # Private member accessed
    "S311",   # Standard pseudo-random generators are not suitable for security/cryptographic purposes
    "D101",   # Missing docstring in public class
    "D102",   # Missing docstring in public method
    "E501",   # Line too long
]
"examples/*" = [
    "D",    # missing docstrings
    "T201", # print found
]

[tool.ruff.lint.pydocstyle]
convention = "pep257"
ignore-decorators = ["typing.overload"]

[tool.ruff.lint.pylint]
allow-magic-value-types = ["int", "str", "float", "bytes"]

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["taskiq_dependencies.Depends", "taskiq.TaskiqDepends"]
